typescript/checker/tests/conformance/parser/ecmascript5/Statements/LabeledStatements/parser_duplicateLabel1.ts.stderr
error: TS1114
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/LabeledStatements/parser_duplicateLabel1.ts:2:1
  |
2 | target:
  | ^^^^^^

